# intelligence

./: .gitignore  AGENTS.md  CONTEXT_AND_LITERATURE.md  CORE.md  Light Cones and Composition.md  OPEN_PROBLEMS.md
.devcontainer/: Dockerfile  devcontainer.json
current_ideas/: BACH Operation of Consciousness.md
experiments/nca_intelligence_metrics/: EXPERIMENT_SPEC.md  GPU_SETUP.md  PHASE2_COMPOSITION.md  PHASE3_SELF_MODEL.md  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
experiments/nca_intelligence_metrics/.devcontainer/: Dockerfile  devcontainer.json
experiments/nca_intelligence_metrics/scripts/: run_phase1.py
experiments/nca_intelligence_metrics/src/: __init__.py  cones.py  metrics.py  nca.py  probes.py  training.py
experiments/nca_intelligence_metrics/tests/: test_nca.py
rcmvae/: README.md  conceptual_model.md  mathematical_specification.md
